--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,4 +37,4 @@ jobs:
 
       - name: Update EKS deployment
         run: |
-          kubectl set image deployment/django-deployment django-deployment=${{ secrets.DOCKER_USERNAME }}/djangoapp:latest --record
+          kubectl set image deployment/django django=${{ secrets.DOCKER_USERNAME }}/djangoapp:latest --record
