--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - main
   pull_request:
-      branches:
-        - main
+    branches:
+      - main
 
 jobs:
   build:
@@ -28,13 +28,10 @@ jobs:
       - name: Set up AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
-
-      - name: Configure kubectl
-        run: aws eks update-kubeconfig --region ap-south-1 --name django-cluster
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: ap-south-1
 
       - name: Update EKS deployment
         run: |
-          kubectl set image deployment/djangoapp django=${{ secrets.DOCKER_USERNAME }}/djangoapp:latest --record
+          kubectl set image deployment/djangoapp djangoapp=${{ secrets.DOCKER_USERNAME }}/djangoapp:latest –record
