--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,5 @@
 name: CI/CD Pipeline
+
 on:
   push:
     branches:
@@ -8,30 +9,40 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+    
+      # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Step 2: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
+      # Step 3: Build and push the Docker image
+      - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/djangoapp:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/djangoapp:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/djangoapp:${{ github.sha }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/djangoapp:${{ github.sha }}
 
-      - name: Set up AWS credentials
+      # Step 4: Set up AWS credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
 
-      - name: Update EKS deployment
+      # Step 5: Configure kubectl for AWS EKS
+      - name: Set up kubectl
+        run: aws eks update-kubeconfig --name django1-cluster --region ap-south-1
+
+      # Step 6: Update the Kubernetes deployment with the new image
+      - name: Deploy to EKS
         run: |
-          kubectl set image deployment/djangoapp djangoapp=${{ secrets.DOCKER_USERNAME }}/djangoapp:latest
+          kubectl set image deployment/djangoapp djangoapp=${{ secrets.DOCKER_USERNAME }}/djangoapp:${{ github.sha }}
