--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,25 +12,21 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    
-      # Step 1: Checkout the code
+
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 3: Build and push the Docker image
       - name: Build and push Docker image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/djangoapp:${{ github.sha }} .
           docker push ${{ secrets.DOCKER_USERNAME }}/djangoapp:${{ github.sha }}
 
-      # Step 4: Set up AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -38,11 +34,18 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
 
-      # Step 5: Configure kubectl for AWS EKS
       - name: Set up kubectl
         run: aws eks update-kubeconfig --name django1-cluster --region ap-south-1
 
-      # Step 6: Update the Kubernetes deployment with the new image
+      - name: Verify Kubernetes Cluster Connection
+        run: kubectl get nodes
+
+      - name: Apply Kubernetes Manifests
+        run: kubectl apply -f k8s/
+
+      - name: List Deployments
+        run: kubectl get deployments -A
+
       - name: Deploy to EKS
         run: |
-          kubectl set image deployment/djangoapp djangoapp=${{ secrets.DOCKER_USERNAME }}/djangoapp:${{ github.sha }}
+          kubectl set image deployment/djangoapp djangoapp=${{ secrets.DOCKER_USERNAME }}/djangoapp:${{ github.sha }} -n your-namespace
