--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -48,4 +48,4 @@ jobs:
 
       - name: Deploy to EKS
         run: |
-          kubectl set image deployment/djangoapp djangoapp=${{ secrets.DOCKER_USERNAME }}/djangoapp:${{ github.sha }} -n your-namespace
+          kubectl set image deployment/djangoapp djangoapp=${{ secrets.DOCKER_USERNAME }}/djangoapp:${{ github.sha }} -n default
